# jsonlite

./: .gitignore  CMakeLists.txt
Examples/iPhoneJsonLite/iPhoneJsonLite.xcodeproj/xcuserdata/andrii.xcuserdatad/xcschemes/: xcschememanagement.plist
jsonlite/include/: jsonlite_buffer.h  jsonlite_parser.h  jsonlite_stream.h
jsonlite/src/: jsonlite_buffer.c  jsonlite_builder.c  jsonlite_parser.c  jsonlite_stream.c
platform/ios/JsonLiteObjC.xcodeproj/: project.pbxproj
platform/ios/JsonLiteObjC.xcodeproj/xcshareddata/xcschemes/: JsonLiteObjC.xcscheme
platform/ios/JsonLiteObjC.xcodeproj/xcuserdata/kevin.xcuserdatad/xcschemes/: JsonLiteObjC.xcscheme  jsonlite.xcscheme  xcschememanagement.plist
